# PythonTemplate

./: LICENSE.md  README.md  main.py  pyproject.toml  requirements-dev.txt
template/: __init__.py  __main__.py  stuff.py
tests/: test_stuff.py
